--- a/todo/src/main/resources/application.properties
+++ b/todo/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.application.name=todo
 # MySQL DB connection
 spring.datasource.url=jdbc:mysql://localhost:3306/tododb
 spring.datasource.username=root
-spring.datasource.password=your_password
+spring.datasource.password=Piyusha@2599
 
 # JPA
 spring.jpa.hibernate.ddl-auto=update
